<resources>
    <string name="app_name">Umair_iBook</string>
    <string name="ibook">iBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onBoarding_text">Reading is a conversation. All books talk but a good book listens as well.</string>
    <string name="get_started">Get Started</string>
    <string name="new_to_ibook_set_up_an_account">New to iBook? Set-Up an account.</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="we_re_glad_to_have_you_back">We\'re glad to have you back.</string>
    <string name="you_re_all_set_and_ready_to_starting_your_favorite_books">You\'re all set and ready to starting your favorite books.</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_password">Create Password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="sign_in_current_user">Sign In current user</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email_address">Email Address</string>
    <string name="create_a_username">Create a username</string>
    <string name="username">Username</string>
    <string name="provide_your_last_name">Provide your last name</string>
    <string name="last_name">Last Name</string>
    <string name="provide_your_first_name">Provide your first name</string>
    <string name="first_name">First Name</string>
    <string name="there_s_a_lot_in_store_for_you">There\'s a lot in store for you.</string>
    <string name="proceed">Proceed</string>
</resources>